--- a/scss/main.scss
+++ b/scss/main.scss
@@ -1,20 +1,67 @@
 @import "variables";
 
-body {
-  background: $primColor;
+* {
+  box-sizing: border-box;
 }
 
-h1 {
+body {
+  background: $primColor;
+  border: solid 5px $highColor;
+  padding: 10px;
+  font-family: $playfair;
+  color: $textMain;
+  height: 100%;
+  line-height: 1.5;
+  margin: 0;
+}
+
+//headings
+
+h1,
+h2,
+h3 {
+  margin: 0;
+  font-weight: 400;
+  &.lg-heading {
+    font-size: 6rem;
+  }
+  &.sm-heading {
+    margin-bottom: 2rem;
+    padding: 0.2rem 1rem;
+    background: rgba(lighten($primColor, 2), 0.5);
+  }
+}
+
+a {
+  color: $highColor;
+  text-decoration: none;
+  font-family: $comfortaa;
+}
+
+.text-secondary {
+  color: $textSecondary;
+}
+
+.highColor {
   color: $highColor;
 }
 
-h2 {
-  color: red;
-}
-h3 {
-  color: green;
+header {
+  position: fixed;
+  z-index: 2;
+  width: 100%;
 }
 
-hr {
-  color: #ca7df9;
+main {
+  padding: 4rem;
+  height: 100%;
+  .icons {
+    margin-top: 1rem;
+    a {
+      padding: 0.4rem;
+      &:hover {
+        color: $textSecondary;
+      }
+    }
+  }
 }
