--- a/scss/variables.scss
+++ b/scss/variables.scss
@@ -10,3 +10,7 @@ $textGrey: #587b7f;
 $playfair: "Playfair Display", serif;
 
 $comfortaa: "Comfortaa", serif;
+
+$show-home-image: true;
+$home-image: url(../dist/img/background.jpg);
+$background-opacity: 0.9;
