--- a/scss/main.scss
+++ b/scss/main.scss
@@ -1,18 +1,5 @@
-@import "variables";
-
-@mixin easeOut {
-  transition: all 0.5s ease-out;
-}
-
-@mixin background {
-  @if $show-home-image {
-    &#bg-img {
-      background: $home-image;
-      background-attachment: fixed;
-      background-size: cover;
-    }
-  }
-}
+@import "config";
+@import "menu";
 
 * {
   box-sizing: border-box;
@@ -44,6 +31,7 @@ h3 {
     margin-bottom: 2rem;
     padding: 0.2rem 1rem;
     background: rgba(lighten($primColor, 2), 0.5);
+    border-radius: 5px;
   }
 }
 
