--- a/scss/_menu.scss
+++ b/scss/_menu.scss
@@ -84,7 +84,7 @@
     .portrait {
       width: 250px;
       height: 250px;
-      background: url("../dist/img/portrait.jpg");
+      background: url("../dist/img/w250.jpg");
       border-radius: 50%;
       border: solid 3px $highColor;
     }
