--- a/scss/_menu.scss
+++ b/scss/_menu.scss
@@ -43,7 +43,7 @@
   position: fixed;
   top: 0;
   width: 100%;
-  opacity: 0.7;
+  // opacity: 0.7;
   visibility: hidden;
   &.show {
     visibility: visible;
@@ -72,7 +72,7 @@
       transform: translate3d(0, 0, 0);
     }
   }
-  //branding
+
   &-branding {
     background: $primary-color;
     transform: translate3d(0, 100%, 0);
