--- a/scss/main.scss
+++ b/scss/main.scss
@@ -1,6 +1,5 @@
 @import "config";
 @import "menu";
-@import "mobile";
 
 * {
   box-sizing: border-box;
@@ -58,7 +57,8 @@ header {
 
 main {
   padding: 4rem;
-  height: 100%;
+  // height: 100%; //of the content inside???
+  min-height: calc(100vh - 60px);
   .icons {
     margin-top: 1rem;
     a {
@@ -76,3 +76,99 @@ main {
     }
   }
 }
+
+//about
+
+.about-info {
+  display: grid;
+  grid-gap: 30px;
+  grid-template-areas:
+    "bioimage bio bio"
+    "job1 job2 job3";
+  grid-template-columns: repeat(3, 1fr);
+
+  .bio-image {
+    grid-area: bioimage;
+    margin: auto;
+    border-radius: 50%;
+    border: $highColor 3px solid;
+  }
+
+  .bio {
+    grid-area: bio;
+    font-size: 1.5rem;
+  }
+
+  .job-1 {
+    grid-area: job1;
+    border: $highColor 3px solid;
+  }
+
+  .job-2 {
+    grid-area: job2;
+    border: $highColor 3px solid;
+  }
+
+  .job-3 {
+    grid-area: job3;
+    border: $highColor 3px solid;
+  }
+
+  .job {
+    background: lighten($primary-color, 5);
+    padding: 0.5rem;
+    // border-bottom: $secondary-color 5px solid;
+  }
+}
+
+////////portfolio
+.projects {
+  display: grid;
+  grid-gap: 0.7rem;
+  grid-template-columns: repeat(3, 1fr);
+
+  img {
+    width: 100%;
+    border: 3px #fff solid;
+
+    &:hover {
+      opacity: 0.5;
+      border-color: $textSecondary;
+      @include easeOut;
+    }
+  }
+}
+
+// Button Styles
+.btn {
+  display: block;
+  padding: 0.5rem 1rem;
+  border: 0;
+  margin-bottom: 0.3rem;
+  &:hover {
+    background: $textSecondary;
+    color: set-text-color($textSecondary);
+  }
+}
+
+.btn-dark {
+  @extend .btn;
+  background: darken($primary-color, 50);
+  color: #fff;
+}
+
+.btn-light {
+  @extend .btn;
+  background: lighten($primary-color, 50);
+  color: #333;
+}
+
+#main-footer {
+  text-align: center;
+  padding: 1rem;
+  background: darken($textGrey, 10);
+  color: set-text-color($primary-color);
+  height: 60px;
+}
+
+@import "mobile";
