--- a/scss/main.scss
+++ b/scss/main.scss
@@ -117,7 +117,7 @@ main {
   .job {
     background: lighten($primary-color, 5);
     padding: 0.5rem;
-    // border-bottom: $secondary-color 5px solid;
+    // border-bottom: $textSecondary 5px solid;
   }
 }
 
@@ -135,6 +135,32 @@ main {
       opacity: 0.5;
       border-color: $textSecondary;
       @include easeOut;
+    }
+  }
+}
+
+// Contact Page
+.boxes {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: space-evenly;
+  align-items: center;
+  margin-top: 1rem;
+
+  div {
+    font-size: 2rem;
+    border: 3px #fff solid;
+    padding: 1.5rem 2.5rem;
+    margin-bottom: 3rem;
+    @include easeOut;
+
+    &:hover {
+      padding: 0.5rem 1.5rem;
+      background: $textSecondary;
+      color: set-text-color($textSecondary);
+      span {
+        color: set-text-color($textSecondary);
+      }
     }
   }
 }
