--- a/scss/_mobile.scss
+++ b/scss/_mobile.scss
@@ -1,10 +1,18 @@
-// widescreens
+// Widescreens
 @include mediaXl {
+  .projects {
+    grid-template-columns: repeat(4, 1fr);
+  }
 }
 
+// Desktops & Laptops
 @include mediaLg {
+  .projects {
+    grid-template-columns: repeat(3, 1fr);
+  }
 }
 
+// Tablets & Small Laptops
 @include mediaMd {
   main {
     align-items: center;
@@ -32,16 +40,18 @@
     transform: translate3d(-100%, 0, 0);
     font-size: 24px;
   }
+
   .menu-branding {
     height: 25vh;
     transform: translate3d(100%, 0, 0);
 
     .portrait {
-      background: url(../dist/img/w150.jpg);
+      background: url("../dist/img/w150.jpg");
       width: 150px;
       height: 150px;
     }
   }
+
   .about-info {
     grid-template-areas:
       "bioimage"
@@ -52,10 +62,27 @@
 
     grid-template-columns: 1fr;
   }
+
+  .projects {
+    grid-template-columns: repeat(2, 1fr);
+  }
 }
 
+// Smartphones
 @include mediaSm {
-  main#home h1 {
-    margin-top: 10vh;
+  main {
+    padding: 2rem;
+    #home h1 {
+      margin-top: 10vh;
+    }
+
+    .lg-heading {
+      margin-top: 1rem;
+      font-size: 5rem;
+    }
+  }
+
+  .projects {
+    grid-template-columns: 1fr;
   }
 }
